<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory android:title="@string/settings_listener_category" >
        <EditTextPreference
            android:defaultValue="api-na-adr-pad.gungho.jp"
            android:key="listener_target_hostname"
            android:summary="@string/settings_listener_target_hostname_summary"
            android:title="@string/settings_listener_target_hostname_title" />

        <ListPreference
            android:defaultValue="manual"
            android:entries="@array/settings_proxy_mode_entries"
            android:entryValues="@array/settings_proxy_mode_entryValues"
            android:summary="@string/settings_proxy_mode_summary"
            android:title="@string/settings_proxy_mode_title" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/settings_padherder_category" >
        <EditTextPreference
            android:key="padherder_login"
            android:summary="@string/settings_padherder_login_summary"
            android:title="@string/settings_padherder_login_title" />
        <EditTextPreference
            android:inputType="textPassword"
            android:key="padherder_password"
            android:summary="@string/settings_padherder_password_summary"
            android:title="@string/settings_padherder_password_title" />        
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/settings_sync_category" >
    </PreferenceCategory>

</PreferenceScreen>