<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/compute_sync_explain"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        android:text="@string/compute_sync_explain" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:orientation="horizontal" >

        <Spinner
            android:id="@+id/compute_sync_choose_account_spinner"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="1" />

        <Button
            android:id="@+id/compute_sync_button"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:text="@string/compute_sync_start" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/compute_sync_progress"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        android:indeterminate="true" />

    <TextView
        android:id="@+id/compute_sync_status"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:gravity="center_vertical"
        android:text="@string/compute_sync_status" />

    <TextView
        android:id="@+id/compute_sync_missing_credentials_text"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:gravity="center_vertical"
        android:text="@string/compute_sync_missing_credentials"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/compute_sync_missing_capture_text"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:gravity="center_vertical"
        android:text="@string/compute_sync_missing_capture"
        android:textSize="20sp" />

</LinearLayout>