<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/choose_sync_head"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/choose_sync_info_head"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/choose_sync_explain"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/choose_sync_info_explain" />

    <TextView
        android:id="@+id/choose_sync_summary"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="10dp"
        android:text="@string/choose_sync_info_summary" />

    <Button
        android:id="@+id/choose_sync_button"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:text="@string/choose_sync_info_button" />

</LinearLayout>