<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/compute_sync_explain"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        android:text="@string/compute_sync_explain" />

    <Button
        android:id="@+id/compute_sync_button"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:text="@string/compute_sync_start" />

    <ProgressBar
        android:id="@+id/compute_sync_progress"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:gravity="center_vertical"
        android:indeterminate="true" />

    <TextView
        android:id="@+id/compute_sync_status"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:gravity="center_vertical"
        android:text="@string/compute_sync_status" />

</LinearLayout>